migrations/wave4-sonarqube/new-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging-platform-sonarqube
  labels:
    env: staging
    domain: platform
    product: sonarqube
    managed-by: terraform
