migrations/wave4-sonarqube/new-namespace/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-sonarqube
  namespace: staging-platform-sonarqube
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube-sonarqube
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/name: sonarqube-sonarqube-sonarqube
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/version: 10.3.0-community
    chart: sonarqube-10.7.0_3598
    heritage: Helm
    release: sonarqube
spec:
  serviceName: sonarqube-sonarqube
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
      release: sonarqube
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: sonarqube
        release: sonarqube
        domain: platform
        owner: platform-team
        environment: staging
        app.kubernetes.io/name: sonarqube
        app.kubernetes.io/part-of: sonarqube
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 0
      containers:
      - name: sonarqube
        image: sonarqube:10.3.0-community
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            ephemeral-storage: 512G
            memory: 4Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1536M
            memory: 2Gi
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              wget --no-proxy --quiet -O /dev/null --timeout=1 --header="X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://localhost:9000/api/system/liveness"
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              #!/bin/bash
              # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
              # status about migration are added to prevent the node to be kill while sonarqube is upgrading the database.
              if wget --no-proxy -qO- http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                exit 0
              fi
              exit 1
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 1
          failureThreshold: 6
        startupProbe:
          httpGet:
            scheme: HTTP
            path: /api/system/status
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 24
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 0
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: sonarqube
          mountPath: /opt/sonarqube/data
          subPath: data
        - name: sonarqube
          mountPath: /opt/sonarqube/temp
          subPath: temp
        - name: sonarqube
          mountPath: /opt/sonarqube/logs
          subPath: logs
        - name: tmp-dir
          mountPath: /tmp
        - name: concat-dir
          mountPath: /opt/sonarqube/conf/
        - name: sonarqube
          mountPath: /opt/sonarqube/extensions
          subPath: extensions
      volumes:
      - name: config
        configMap:
          name: sonarqube-sonarqube-config
          items:
          - key: sonar.properties
            path: sonar.properties
      - name: secret-config
        secret:
          secretName: sonarqube-sp-saml
          items:
          - key: secret.properties
            path: secret.properties
      - name: init-sysctl
        configMap:
          name: sonarqube-sonarqube-init-sysctl
          items:
          - key: init_sysctl.sh
            path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: sonarqube-sonarqube-init-fs
          items:
          - key: init_fs.sh
            path: init_fs.sh
      - name: sonarqube
        persistentVolumeClaim:
          claimName: data-sonarqube-sonarqube-0
      - name: tmp-dir
        emptyDir: {}
      - name: concat-dir
        emptyDir: {}
