migrations/wave4-sonarqube/new-namespace/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sonarqube
  namespace: staging-platform-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-10.7.0_3598
    heritage: Helm
    release: sonarqube
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  selector:
    app: sonarqube
    release: sonarqube
